# Tiny-Inference-Engine

./: .gitignore  CMakeLists.txt  README.md  makefile  platformio.ini
src/: CMakeLists.txt  main.c
src/memory/: arena.c
src/model/: generate_weights.py  loader.c  loader.h
src/operations/: conv2d.c  conv2d.h  gemm.c  gemm.h  im2col.c  im2col.h  relu.c  relu.h  requantize.c  requantize.h  softmax.c  softmax.h
src/ops/: conv2d.c  conv2d.h  gemm.c  im2col.c
tests/: test_arena.c  test_conv2d.c  test_gemm.c  test_im2col.c  test_relu.c  test_requantize.c  test_softmax.c
tests/test_arena/: test_arena.c
tests/test_conv2d/: test_conv2d.c
tests/test_gemm/: test_gemm.c
tests/test_im2col/: test_im2col.c
tests/test_relu/: test_relu.c
tests/test_requantize/: test_requantize.c
tests/test_softmax/: test_softmax.c
